# Basic_Data_Analysis

./: README.md  Salary_Data_analysis_pandas.ipynb  Salary_Data_analysis_pandas2.ipynb  pyproject.toml  visualization_plotly.ipynb  visualization_plotly_fixed.ipynb
